# rift-noida-fullstack

./: .gitignore  GOOGLE_MAPS_API_SETUP.md  README.md  package.json  tsconfig.tsbuildinfo
RIFT/Rift-noida/: package-lock.json  package.json  tsconfig.tsbuildinfo
RIFT/Rift-noida/supabase/: STORAGE_SETUP.md  schema.sql
ride-escrow/: README.md  ride-escrow.code-workspace
ride-escrow/projects/ride-escrow/: .algokit.toml  README.md  pyproject.toml
ride-escrow/projects/ride-escrow/.algokit/: .copier-answers.yml
ride-escrow/projects/ride-escrow/smart_contracts/artifacts/ride_escrow/: RideEscrow.approval.puya.map  RideEscrow.approval.teal  RideEscrow.arc32.json  RideEscrow.arc56.json  ride_escrow_client.py
ride-escrow/projects/ride-escrow/smart_contracts/ride_escrow/: contract.py  deploy_config.py
src/app/: globals.css  page.tsx
src/app/login/: page.tsx
src/app/profile/: page.tsx
src/components/: BestDealCard.tsx  LocationForm.tsx  ResultCard.tsx  VideoBackground.tsx  WalletPanel.tsx
src/components/auth/: AuthForm.tsx  RoleLoginCard.tsx
src/components/rideshare/: BookRideForm.tsx  CoreRideSharePanel.tsx  DriverRealtimeView.tsx  PassengerDashboard.tsx  PassengerRideStatus.tsx  RealtimeRideList.tsx  RoleSelector.tsx  VehicleDetailsForm.tsx
src/components/ui/: LoadingSkeleton.tsx  RatingStars.tsx
src/components/verification/: VerificationSection.tsx
src/lib/: googleMaps.ts
src/types/: index.ts
supabase/migrations/: 20240219000000_user_verifications.sql  20250220000000_campus_rides_realtime.sql  20250220000001_add_driver_accept_and_place_names.sql
(+55 files in other folders)
