[tool.poetry]
name = "ride-escrow"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["madhur12031203 <madhur12031203@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
algorand-python = "^3"
algorand-python-testing = "^1"
beaker-py = "^2.5.4"
pyteal = "^0.27.0"
py-algorand-sdk = "^2.11.1"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

